# rust-backend

./: .env.example  Cargo.toml
src/: config.rs  database.rs  main.rs
src/category/: handler.rs  model.rs  repository.rs
src/category/product/: handler.rs  helper.rs  mod.rs  model.rs  repository.rs
src/category/product/stock/: handler.rs
src/common/: email.rs  jwt.rs  mod.rs  response.rs  types.rs
src/store/: handler.rs  helper.rs  mod.rs  model.rs  repository.rs
src/user/: handler.rs  helper.rs  mod.rs  model.rs  repository.rs
