[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
bcrypt = "0.15.1"
mongodb = "3.1.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
