[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
bcrypt = "0.15.1"
mongodb = "3.1.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
once_cell = "1.20.2"
resend-rs = "0.9.1"
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
serde_with = "3.11.0"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
